--- a/styles/amenitiesStyles.css
+++ b/styles/amenitiesStyles.css
@@ -17,6 +17,13 @@ body {
     justify-content: center;
 }
 
+.siteLogo {
+  max-width: 100vw;
+  max-height: 300px;
+  display: flex;
+  justify-self: center;
+}
+
 .headerLinksDiv {
     display: flex;
     gap: 75px;
@@ -50,21 +57,21 @@ h1 {
 }
 
 .bodyCopy {
-    display: flex;
-    justify-self: center;
-    align-self: center;
-    text-align: left;
-    font-size: 16pt;
-    font-family: "Cabin", sans-serif;
-    font-optical-sizing: auto;
-    line-height: 40px;
-    width: 50vw;
+  text-align: left;
+  font-size: 16pt;
+  font-family: "Cabin", sans-serif;
+  font-optical-sizing: auto;
+  width: 60%;
+  display: flex;
+  align-self: center;
+  justify-self: center;
 }
 
 @media screen and (max-width: 800px) {
-    .bodyCopy {
-        font-size: 12pt;
-    }
+  .bodyCopy {
+      font-size: 12pt;
+      line-height: 20pt;
+  }
 }
 
 .vertSpacer {
