--- a/styles/donationStyles.css
+++ b/styles/donationStyles.css
@@ -24,6 +24,13 @@ body {
     text-decoration: none;
 }
 
+.siteLogo {
+  max-width: 100vw;
+  max-height: 300px;
+  display: flex;
+  justify-self: center;
+}
+
 .siteTitle:hover {
     color: lightblue;
 }
