--- a/styles/indexStyles.css
+++ b/styles/indexStyles.css
@@ -38,25 +38,19 @@ body {
     color: lightblue;
 }
 
-.heroImage {
+.signImg {
     display: flex;
     justify-self: center; /*align horizontal*/
     align-self: center;
     justify-content: center;
     align-content: center;
-    width: 40vw;
+    width: 60vw;
 }
 
 @media screen and (max-width: 800px) {
-  .heroImage {
-    width: 90vw;
+  .signImg {
+    width: 100vw;
   }
-}
-
-.signImg {
-    max-width: 95%;
-    height: auto;
-    align-self: center;
 }
 
 h1 {
@@ -194,12 +188,11 @@ h1 {
 
 @import url("https://fonts.googleapis.com/css2?family=Russo+One&display=swap");
 
-.siteHeader {
-  color: white;
-  font-size: 32pt;
-  padding: 25px;
-  font-family: "Russo One", sans-serif;
-  text-align: center;
+.siteLogo {
+  max-width: 100vw;
+  max-height: 300px;
+  display: flex;
+  justify-self: center;
 }
 
 .wrapper {
