--- a/styles/photosStyles.css
+++ b/styles/photosStyles.css
@@ -17,6 +17,13 @@ body {
     justify-content: center;
 }
 
+.siteLogo {
+  max-width: 100vw;
+  max-height: 300px;
+  display: flex;
+  justify-self: center;
+}
+
 .headerLinksDiv {
     display: flex;
     gap: 75px;
@@ -132,22 +139,18 @@ body {
   }
 
 .bodyCopy {
-    text-align: left;
-    font-size: 16pt;
-    font-family: "Cabin", sans-serif;
-    font-optical-sizing: auto;
-    line-height: 40px;
-    width: 30vw;
-    display: flex;
-    align-self: center;
-    justify-self: center;
+  text-align: left;
+  font-size: 16pt;
+  font-family: "Cabin", sans-serif;
+  font-optical-sizing: auto;
 }
 
 @media screen and (max-width: 800px) {
-    .bodyCopy {
-      line-height: 25px;
-    }
+  .bodyCopy {
+      font-size: 12pt;
+      line-height: 20pt;
   }
+}
 
 .flexGallery {
     width: 100vw;
